--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "NOTIFICATION": true,
-    "language": "vi",
+    "language": "en",
     "notiGroup": true,
     "keyActive": "",
     "DeveloperMode": false,
